# EsoBinaria

./: .gitignore  CMakeLists.txt  Containerfile  README.md  build.sh  build.wasm.sh  compile_commands.md  container.build.sh  container.run.sh  container.run.wasm.sh  deps.linux.sh  emsdk.src  emsdk_linux.src  native.sh  notes.md  notes.txt  run.native.sh  run.sh  run.wasm.sh  s7.sh  shell_minimal.html  test.sh  tiles.aseprite  to_cloud.sh  wasm.sh
asset_meta/: bg-art.aseprite  itch-banner.xcf  itch-cover.xcf  itch.html  tile-base.aseprite  tiles.aseprite  title.aseprite
build_res/: launch.EsoBinaria.sh  shell_minimal.html
doc/: EsoMachina.md
examples/: Basic.h  Button.h  Controller.h  Flap.h  Sound.h  Sprite.h  Tiles.h
examples/assets/: menu.m4a  spritesheet.aseprite
game/: BottomBar.h  BtnMainMenu.h  BtnNub.h  BtnTile.h  BtnTopMenu.h  Cell.h  Cursor.h  EmailScreen.h  Eso.h  GameMaster.h  Grid.h  HelpScreen.h  Huk.h  MainMenu.h  Modal.h  ScreenEmail.h  ScreenMainMenu.h  ScreenSettings.h  ScreenSetup.h  SetupScreen.h  Sounds.h  TestArea.h  TestCase.h  Tips are just oblique strategies lol  TopBar.h  TopMenu.h  _colors.h  _fonts.h  _gameMaster.h  _helpItems.h  _sounds.h  _text.h  notes  notes.txt
game/asset-meta/: icon.aseprite  tiles.aseprite
game/assets/shaders/: fragment_shader.glsl  vertex_shader.glsl
game/doc/: EsoMachina.md
lib/s7/: LICENSE.md  s7.c
oldbuild/: run.sh  s7.sh
src/: BG.h  BottomBar.h  BtnTile.h  Cell.h  CellSprites.h  Cursor.h  Eso.h  FX.h  GameMaster.h  Grid.h  Huk.h  Imp.h  Modal.h  ScreenBG.h  ScreenBumper.h  ScreenEmail.h  ScreenFx.h  ScreenMainMenu.h  ScreenSettings.h  ScreenSetup.h  TestArea.h  TestCase.h  TestData.h  TopBar.h  _colors.h  _fonts.h  _gameMaster.h  _helpItems.h  _text.h  g_fonts.h  g_helpItems.h  main.cpp
tools/: build.s7.sh  build.sh  build.wasm.sh  compile_commands.sh  container.build.sh  container.run.it.sh  container.run.sh  container.run.wasm.sh  reset-store.sh  run.sh
